Add icons and design modified

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>QUIZ APP</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <img class="bookmark" src="icons/bookmark.png" width="63" alt="" />
     <header>QUIZ APP</header>
 
-    <article class="question-card">
-      <div class="question-1">Question</div>
-      <div class="question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-        reprehenderit, fuga porro odit sed accusamus, aliquam suscipit nihil
-        illo dolores minima ipsa. Nostrum deserunt exercitationem, vitae dolores
-        est sed aliquam?
+    <article class="quiz-card">
+      <div class="question-title">Question</div>
+      <div class="question-card">
+        Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
+        inventore! Quaerat minima obcaecati rem sequi veniam magnam labore sed.
       </div>
       <button class="show-answer-btn">Show Answer</button>
       <ul class="answers">
@@ -26,13 +27,11 @@
       </ul>
     </article>
 
-    <article class="question-card">
-      <div class="question-1">Question</div>
-      <div class="question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-        reprehenderit, fuga porro odit sed accusamus, aliquam suscipit nihil
-        illo dolores minima ipsa. Nostrum deserunt exercitationem, vitae dolores
-        est sed aliquam?
+    <article class="quiz-card">
+      <div class="question-title">Question</div>
+      <div class="question-card">
+        Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
+        inventore! Quaerat minima obcaecati rem sequi veniam magnam labore sed.
       </div>
       <button class="show-answer-btn">Show Answer</button>
       <ul class="answers">
@@ -43,21 +42,19 @@
       </ul>
     </article>
 
-    <article class="question-card">
-      <div class="question-1">Question</div>
-      <div class="question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-        reprehenderit, fuga porro odit sed accusamus, aliquam suscipit nihil
-        illo dolores minima ipsa. Nostrum deserunt exercitationem, vitae dolores
-        est sed aliquam?
-      </div>
-      <button class="show-answer-btn">Show Answer</button>
-      <ul class="answers">
-        <li>Ans1</li>
-        <li>Ans2</li>
-        <li>Ans3</li>
-        <li>Ans4</li>
-      </ul>
-    </article>
+    <footer class="footer">
+      <a class="icons" href=""
+        ><img src="icons/home.png" width="63px" height="63px" alt=""
+      /></a>
+      <a class="icons" href=""
+        ><img src="icons/bookmark.png" width="63px" height="63px" alt=""
+      /></a>
+      <a class="icons" href=""
+        ><img src="icons/pencil.png" width="63px" height="63px" alt=""
+      /></a>
+      <a class="icons" href=""
+        ><img src="icons/person.png" width="63px" height="63px" alt=""
+      /></a>
+    </footer>
   </body>
 </html>
