Change icons and border color

--- a/index.html
+++ b/index.html
@@ -9,51 +9,67 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <img class="bookmark" src="icons/bookmark.png" width="63" alt="" />
     <header>QUIZ APP</header>
 
-    <article class="quiz-card">
-      <div class="question-title">Question</div>
-      <div class="question-card">
-        Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
-        inventore! Quaerat minima obcaecati rem sequi veniam magnam labore sed.
-      </div>
-      <button class="show-answer-btn">Show Answer</button>
-      <ul class="answers">
-        <li>Ans1</li>
-        <li>Ans2</li>
-        <li>Ans3</li>
-        <li>Ans4</li>
-      </ul>
-    </article>
+    <main class="scrollable">
+      <article class="quiz-card">
+        <img
+          class="bookmark"
+          src="icons/bookmark.png"
+          width="48"
+          height="48"
+          alt=""
+        />
+        <div class="question-title">Question</div>
+        <div class="question-card">
+          Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
+        </div>
+        <button class="show-answer-btn">Show Answer</button>
+        <ul class="answers">
+          <li>Ans1</li>
+          <li>Ans2</li>
+          <li>Ans3</li>
+          <li>Ans4</li>
+        </ul>
+      </article>
 
-    <article class="quiz-card">
-      <div class="question-title">Question</div>
-      <div class="question-card">
-        Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
-        inventore! Quaerat minima obcaecati rem sequi veniam magnam labore sed.
-      </div>
-      <button class="show-answer-btn">Show Answer</button>
-      <ul class="answers">
-        <li>Ans1</li>
-        <li>Ans2</li>
-        <li>Ans3</li>
-        <li>Ans4</li>
-      </ul>
-    </article>
-
+      <article class="quiz-card">
+        <img
+          class="bookmark"
+          src="icons/bookmark.png"
+          width="48"
+          height="48"
+          alt=""
+        />
+        <div class="question-title">Question</div>
+        <div class="question-card">
+          Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
+        </div>
+        <button class="show-answer-btn">Hide Answer</button>
+        <ul class="answers">
+          <li>Ans1</li>
+          <li>Ans2</li>
+          <li>Ans3</li>
+          <li>Ans4</li>
+        </ul>
+      </article>
+    </main>
     <footer class="footer">
       <a class="icons" href=""
-        ><img src="icons/home.png" width="63px" height="63px" alt=""
+        ><img src="icons/home.png" width="48" height="48" alt="home-icon"
       /></a>
       <a class="icons" href=""
-        ><img src="icons/bookmark.png" width="63px" height="63px" alt=""
+        ><img
+          src="icons/bookmark.png"
+          width="48"
+          height="48"
+          alt="bookmark-icon"
       /></a>
       <a class="icons" href=""
-        ><img src="icons/pencil.png" width="63px" height="63px" alt=""
+        ><img src="icons/input.png" width="48" height="48" alt="input-icon"
       /></a>
       <a class="icons" href=""
-        ><img src="icons/person.png" width="63px" height="63px" alt=""
+        ><img src="icons/person.png" width="48" height="48" alt="profile-icon"
       /></a>
     </footer>
   </body>
