--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <header>QUIZ APP</header>
+    <nav>
+      <header>QUIZ APP</header>
+    </nav>
 
-    <main class="scrollable">
-      <article class="quiz-card">
+    <main data-page="home" class="scrollable">
+      <article class="quiz__card">
         <img
           class="bookmark"
           src="icons/bookmark.png"
@@ -20,11 +22,11 @@
           height="48"
           alt=""
         />
-        <div class="question-title">Question</div>
-        <div class="question-card">
+        <div class="question__title">Question</div>
+        <div class="question__card">
           Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
         </div>
-        <button class="show-answer-btn">Show Answer</button>
+        <button class="show-answer__btn">Show Answer</button>
         <ul class="answers">
           <li>Ans1</li>
           <li>Ans2</li>
@@ -33,7 +35,7 @@
         </ul>
       </article>
 
-      <article class="quiz-card">
+      <article class="quiz__card">
         <img
           class="bookmark"
           src="icons/bookmark.png"
@@ -41,11 +43,11 @@
           height="48"
           alt=""
         />
-        <div class="question-title">Question</div>
-        <div class="question-card">
+        <div class="question__title">Question</div>
+        <div class="question__Scard">
           Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
         </div>
-        <button class="show-answer-btn">Hide Answer</button>
+        <button class="show-answer__btn">Hide Answer</button>
         <ul class="answers">
           <li>Ans1</li>
           <li>Ans2</li>
