--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
 
     <main data-page="home" class="scrollable">
-      <article class="quiz__card">
+      <article class="quiz__card home">
         <img
           class="bookmark"
           src="icons/bookmark.png"
@@ -47,7 +47,7 @@
         <div class="question__Scard">
           Lorem ipsum, dolor ss minima mollitia fugiat assumenda dolorem
         </div>
-        <button class="show-answer__btn">Hide Answer</button>
+        <button class="show-answer__btn">Show Answer</button>
         <ul class="answers">
           <li>Ans1</li>
           <li>Ans2</li>
