--- a/nav.html
+++ b/nav.html
@@ -6,30 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <nav>
-      <button>
-        <img src="icons/home.png" width="48" height="48" alt="home-icon" />
-      </button>
-      <button>
-        <img
-          src="icons/bookmark.png"
-          width="48"
-          height="48"
-          alt="bookmark-icon"
-        />
-      </button>
-      <button>
-        <img src="icons/input.png" width="48" height="48" alt="input-icon" />
-      </button>
-      <button>
-        <img
-          src="icons/profile.png"
-          width="48"
-          height="48"
-          alt="profile-icon"
-        />
-      </button>
-    </nav>
-  </body>
+  <body></body>
+
+  ‚
 </html>
